# EARTHSHINE

./: .gitattributes  .gitignore  BDRF_and_albedo_finder_1.py  BDRF_and_albedo_finder_2.py  BDRF_and_albedo_finder_3.py  BDRF_and_albedo_finder_4.py  CODE_1_looper_generate_ideal_ims_from_JDlist_2.py  CODE_2_looper_generate_scaled_observed_and_mathcing_ideal_images_2.py  CODE_3_transform_FITS_to_npy_CycleGAN_1.py  CODE_4_datasets_CycleGAN_1.py  CODE_5_setup_2.py  Dockerfile  Dockerfile.eshine  Dockerfile.spawn_tester  EARTHSHINE_GENERATEMLIMAGES.Rproj  Iearth.now  JDlist.txt  JDtouseforSYNTH  JDtouseforSYNTH_117  LRO_vs_CLEM_albedo_maps_4_albedo_histograms.py  LRO_vs_CLEM_albedo_maps_5.py  MANI_sample_Frederic_1.Rmd  MLO_imagefiles.txt  PoiDev.pro  README.md  README_check_CUBES.md  README_cubebuilding.md  align_coadd_then_center_INT_or_FLOAT_shifts_AVERAGE.py  align_coadd_then_center_INT_or_FLOAT_shifts_AVERAGE_SCI_DARK_DIFF_DARKFIRST.py  align_coadd_then_center_ROBUSTER.py  allDARKframes.txt  allJDsFromImages.txt  allMOONDROPBOXfiles.txt  atlas.rds  augmentator_5.py  build_4col_file_for_3dCUBE_builder.py  build_CUBES.py  build_EARTHSHINE_CODE.scr  build_spawn_tester.txt  check_filter_mismatch.py  (+117 more)
DATA/: Scientists.csv
Eshine/: 1x1_70NS_7b_wbhs_albflt_grid_geirist_tcorrect_w.tif
OLD/: LRO_vs_CLEM_albedo_maps_1.py  LRO_vs_CLEM_albedo_maps_2.py  LRO_vs_CLEM_albedo_maps_3.py  make_poisson.py  make_poisson_2.py
OUTPUT/: LunarImg_0000.fit  SunMask_LunarImg_0000.fit
PRO/: 1wire_reader_1.pro  Align3D.pro  BIANDA_mflat_make_flat.pro  BLIND_remove_scattered.pro  BREDF.pro  (+2104 more)
(+273 files in other folders)
